--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: BY Blog
+title: Initalization
 SEOTitle: __init__ | Initalization
 header-img: img/post-bg-desk.jpg
 email: 2634735762@qq.com
